<resources>
    <string name="app_name">Clima</string>
    <string name="texto_grados">29°</string>
    <string name="texto_ciudad">Felipe Carrillo Puerto</string>
    <string name="texto_estatus">Parcialmente nublado</string>

    <string name="texto_bienvenida">
        Bienvenido a mi app del clima, para poder ver el clima de una ciudad selecciona la opcion de abajo.
    </string>

    <string name="texto_boton_fcp">Felipe Carrillo Puerto</string>
    <string name="texto_boton_chetu">Chetumal</string>
    <string name="texto_boton_tulum">Tulum</string>
    <string name="texto_boton_cancun">Cancún</string>
</resources>