<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_grados"
        android:textAlignment="center"
        android:textColor="@color/color_grados"
        android:textSize="72sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGrados"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textColor="@color/color_ciudad"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCiudad"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/texto_estatus"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_ciudad"
        android:textSize="24sp" />

</RelativeLayout>